src/objects/Renewal_Notifications__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Renewal Notifications for Magazines and Newspaper</description>
    <fields>
        <fullName>X1st_Expiry_Notification_Date__c</fullName>
        <defaultValue>28</defaultValue>
        <label>1st Expiry Notification Date</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1st_Notification_Magazine__c</fullName>
        <defaultValue>42</defaultValue>
        <description>this is used for configurable days in renewal notification</description>
        <label>1st Notification Magazine</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1st_Notification_Newspaper__c</fullName>
        <defaultValue>42</defaultValue>
        <label>1st Notification Newspaper</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2nd_Expiry_Notification_Date__c</fullName>
        <defaultValue>10</defaultValue>
        <label>2nd Expiry Notification Date</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2nd_Notification_Magazine__c</fullName>
        <defaultValue>14</defaultValue>
        <label>2nd Notification Magazine</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2nd_Notification_Newspaper__c</fullName>
        <defaultValue>14</defaultValue>
        <label>2nd Notification Newspaper</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Renewal Notifications</label>
</CustomObject>